--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.1",
+    "@types/marked": "^4.3.0",
     "astro": "^2.3.1",
+    "contentful": "^10.1.3",
+    "marked": "^5.0.0",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
