--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@astrojs/tailwind": "^3.1.1",
     "@types/marked": "^4.3.0",
+    "@types/prismjs": "^1.26.0",
     "astro": "^2.3.1",
     "contentful": "^10.1.3",
     "marked": "^5.0.0",
+    "prismjs": "^1.29.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
