--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.3.1",
     "contentful": "^10.1.3",
+    "highlight.js": "^11.8.0",
     "marked": "^5.0.0",
     "marked-highlight": "^1.0.1",
-    "prismjs": "^1.29.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
